--- a/WebApplication1/rptCredencial.resx
+++ b/WebApplication1/rptCredencial.resx
@@ -126,14 +126,13 @@ EN EL ESTADO, CON SUJECIÓN A LAS LEYES, PLANES Y PROGRAMAS VIGENTES EN LOS CENT
 * SU VIGENCIA ES POR UN EJERCICIO FISCAL Y ESTARÁ INDICADA MEDIANTE EL SELLO RESPECTIVO.
 * EL DIRECTOR RESPONSABLE DE OBRA QUEDA OBLIGADO A CUMPLIR CON LA NORMATIVIDAD VIGENTE EN MATERIA DE ORDENAMIENTO TERRITORIAL Y DESARROLLO URBANO EN EL ESTADO.
 * EL INCUMPLIMIENTO DARÁ LUGAR A LAS SANCIONES PREVISTAS EN LA LEY DE ORDENAMIENTO TERRITORIAL Y DESARROLLO URBANO PARA EL ESTADO DE OAXACA  Y SU REGLAMENTO, ASÍ COMO A LA SUSPENSIÓN TEMPORAL DEL REGISTRO Y EN CASO DE REINCIDENCIA, A LA CANCELACIÓN DEL MISMO.
-* EL DRO DEBERÁ REALIZAR PERSONALMENTE LOS TRÁMITES
-QUE SUSCRIBA CON TAL CARÁCTER.</value>
+* EL DRO DEBERÁ REALIZAR PERSONALMENTE LOS TRÁMITES QUE SUSCRIBA CON TAL CARÁCTER.</value>
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="xrPictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAaoAAAEACAYAAADiCDJ+AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAF2eSURBVHhe7d1plJVVnu953vZavVbX61tr3VXrdvet6nvz
+        YQUAAAAJcEhZcwAACwwAAAsMAT9AIsgAAF2eSURBVHhe7d1plJVVnu953vZavVbX61tr3VXrdvet6nvz
         VlfVrbbyZpWZWVVZmpqpqWmm8zyj4iyKgCgig8g8zzPBPCmjzIqiKCA4gKAgAuKsmWqaaWbu3r8nYkfs
         +J/f3s/eTzwnOA/s/1pfwYgTxIkT5zyfePZ5zhNdlFKld+utt3Y777zz1txxxx2Hr7rqqqP482R2++23
         N0S33XZbw9a1a9e6pu8Tde+WW26JSn/dR++5557P7r333i+Q/nvp3X333Serz+68887j3bp1O9wo6e/R
@@ -539,7 +538,7 @@ QUE SUSCRIBA CON TAL CARÁCTER.</value>
   <data name="xrPictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAaoAAAEBCAYAAAApVOHbAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAEuUSURBVHhe7d13vGV1fe//+ev+LNiuSTSALQ8xBkOiXk1u
+        YQUAAAAJcEhZcwAACwwAAAsMAT9AIsgAAEuUSURBVHhe7d13vGV1fe//+ev+LNiuSTSALQ8xBkOiXk1u
         DLlgN8YgSgfRXI0xsXETgxUZpfeZoc/AgIoFQar0IkWatAHpWBAVURDpZRh0/dZ7nfM989nf8/ruVfb6
         7lPm83k8Xg+Yw8ycs/fR9Tzru7577QVFUfRaORs/5znP2Wvttde+5OUvf/nPyl/rg57ned487S/+4i9+
         ve666/7oVa961VHlrzctey750DX8YNv0hb3yla/83tOe9rQn1llnnVUf+MAHikWLFhUXXHBBcccdd5S/
